Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -545,7 +545,7 @@
             <div class="product" data-car="general" id="prod-20">
                 <div class="slider-container" id="slider-20">
                     <button class="slider-btn prev-btn" style="left:0" onclick="moveSlide(20, -1)">❮</button>
-                    <img src="21.jepg" class="active" onclick="openImage(this.src)">
+                    <img src="21.jpeg" class="active" onclick="openImage(this.src)">
                     <button class="slider-btn next-btn" style="right:0" onclick="moveSlide(20, 1)">❯</button>
                 </div>
                 <h3>Front grille toyota corolla</h3>
@@ -561,7 +561,7 @@
             <div class="product" data-car="general" id="prod-21">
                 <div class="slider-container" id="slider-21">
                     <button class="slider-btn prev-btn" style="left:0" onclick="moveSlide(21, -1)">❮</button>
-                    <img src="22.jepg" class="active" onclick="openImage(this.src)">
+                    <img src="22.jpeg" class="active" onclick="openImage(this.src)">
                     <button class="slider-btn next-btn" style="right:0" onclick="moveSlide(21, 1)">❯</button>
                 </div>
                 <h3>Diffuser toyota corolla 3 parts</h3>
@@ -577,7 +577,7 @@
             <div class="product" data-car="general" id="prod-22">
                 <div class="slider-container" id="slider-22">
                     <button class="slider-btn prev-btn" style="left:0" onclick="moveSlide(22, -1)">❮</button>
-                    <img src="23.jepg" class="active" onclick="openImage(this.src)">
+                    <img src="23.jpeg" class="active" onclick="openImage(this.src)">
                     <button class="slider-btn next-btn" style="right:0" onclick="moveSlide(22, 1)">❯</button>
                 </div>
                 <h3>Front lip toyota corolla</h3>
@@ -593,7 +593,7 @@
             <div class="product" data-car="general" id="prod-23">
                 <div class="slider-container" id="slider-23">
                     <button class="slider-btn prev-btn" style="left:0" onclick="moveSlide(23, -1)">❮</button>
-                    <img src="24.jepg" class="active" onclick="openImage(this.src)">
+                    <img src="24.jpeg" class="active" onclick="openImage(this.src)">
                     <button class="slider-btn next-btn" style="right:0" onclick="moveSlide(23, 1)">❯</button>
                 </div>
                 <h3>Mirror cover bat man </h3>
@@ -609,7 +609,7 @@
             <div class="product" data-car="general" id="prod-24">
                 <div class="slider-container" id="slider-24">
                     <button class="slider-btn prev-btn" style="left:0" onclick="moveSlide(24, -1)">❮</button>
-                    <img src="25.jepg" class="active" onclick="openImage(this.src)">
+                    <img src="25.jpeg" class="active" onclick="openImage(this.src)">
                     <button class="slider-btn next-btn" style="right:0" onclick="moveSlide(24, 1)">❯</button>
                 </div>
                 <h3>Bundle Toyota corolla </h3>
@@ -998,3 +998,4 @@
     </script>
 </body>
 </html>
+
